--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.6.3",
-    "ityped": "^1.0.3",
     "next": "12.1.5",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "react-tsparticles": "^2.0.6",
+    "tsparticles": "^2.0.6"
   },
   "devDependencies": {
     "@types/node": "17.0.27",
