--- a/package.json
+++ b/package.json
@@ -13,16 +13,19 @@
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.6.3",
+    "@react-three/fiber": "^8.2.2",
     "next": "12.1.5",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-tsparticles": "^2.0.6",
+    "three": "^0.143.0",
     "tsparticles": "^2.0.6"
   },
   "devDependencies": {
     "@types/node": "17.0.27",
     "@types/react": "18.0.6",
     "@types/react-dom": "18.0.2",
+    "@types/three": "^0.143.0",
     "eslint": "8.14.0",
     "eslint-config-next": "12.1.5",
     "typescript": "4.6.3"
