--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
-    "@mui/icons-material": "^5.6.2",
+    "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.6.3",
     "@react-three/fiber": "^8.2.2",
     "next": "12.1.5",
     "react": "18.0.0",
+    "react-backdrop-filter": "2.1.0",
     "react-dom": "18.0.0",
     "react-tsparticles": "^2.0.6",
     "three": "^0.143.0",
