--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.6.3",
+    "@react-three/drei": "^9.19.6",
     "@react-three/fiber": "^8.2.2",
     "next": "12.1.5",
     "react": "18.0.0",
