--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.6.3",
     "@react-three/drei": "^9.19.6",
     "@react-three/fiber": "^8.2.2",
+    "framer-motion": "^7.0.0",
     "next": "12.1.5",
     "react": "18.0.0",
     "react-backdrop-filter": "2.1.0",
