--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
         "@mui/material": "^5.6.3",
         "@react-three/drei": "^9.19.6",
         "@react-three/fiber": "^8.2.2",
+        "drei": "^2.2.21",
         "framer-motion": "^7.0.0",
         "next": "12.1.5",
         "react": "18.0.0",
         "react-backdrop-filter": "2.1.0",
         "react-dom": "18.0.0",
+        "react-three-fiber": "^6.0.13",
         "react-tsparticles": "^2.0.6",
         "sass": "^1.54.1",
         "three": "^0.143.0",
