--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "private": true,
     "scripts": {
         "dev": "next dev",
-        "build": "git apply changes.patch && next build",
+        "postinstall": "node ./scripts/bvh-remove.js",
+        "build": "yarn postinstall && next build",
         "start": "next start",
         "lint": "next lint"
     },
